--- a/indexcss.css
+++ b/indexcss.css
@@ -1,12 +1,61 @@
+*{
+    box-sizing: border-box;
+}
+
+/* body{
+    margin: 0;
+} */
 
 .inlineBlock{
     display: inline-block;
 }
 
+.whiteText{
+    color: white;
+}
+
 nav {
     position: fixed;
+    background-color: rgba(0, 0, 3);
+    width: 100%;
+    padding: 10px 20px;
+    border-bottom: 2px solid rgb(42, 42, 252);
+}
+
+#brandNameContainer{
+    font-size: 30px;
+}
+
+.menuContainer{
+    width: 85%;
+    text-align: right;
 }
 
 ul{
     list-style: none;
+}
+
+.menuItem{
+padding-right: 15px;
+font-size: 20px;
+}
+
+a{
+    text-decoration: none;
+    padding-right: 5px;
+  }
+
+  a::after{
+    padding: 5px;
+    content: "|";
+}  
+
+
+a:hover{
+    color : rgb(42, 42, 252);
+}
+
+main{
+    position: relative;
+    top: 100px;
 }
