--- a/main.css
+++ b/main.css
@@ -75,7 +75,7 @@ main{
     border-radius: 50%;
     border: 14px solid #283593;
     position: relative;
-    box-shadow: 0 2vw 4vw -1vw rgba(0, 0, 0, 0.8);
+    box-shadow: -10px 18px 20px 10px rgba(0, 0, 0, 0.3);
 }
 
 .dot{
@@ -91,7 +91,7 @@ main{
     bottom: 0;
     margin: auto; 
     z-index: 10;
-    box-shadow: 0 2px 4px -1px  #263238;;
+    box-shadow: -1px 3px  5px rgba(0, 0, 0, 0.3);
 }
 
 .clockHand{
@@ -158,13 +158,13 @@ span{
 }
 
 .hour3{
-    top: 155px;
+    top: 150px;
     right: 30px;
 }
 
 .hour9{
     left: 32px;
-    top: 155px;
+    top: 150px;
 }
 
  .diallines{
@@ -204,6 +204,7 @@ span{
      margin-left: -60px;
     font-weight: 800;
     letter-spacing: 3px;
+    box-shadow: inset -2px 2px 5px rgba(0, 0, 0, 0.25);
 } 
 
 .analogClockDay{
@@ -225,4 +226,5 @@ span{
     margin-left: -60px;
     font-weight: 800;
     letter-spacing: 3px;
+    box-shadow: inset -2px 2px 5px rgba(0, 0, 0, 0.25);
 } 
